[package]

name = "racer"
version = "1.0.0"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>"]

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"

[profile.release]
debug = true

[dependencies]
log = "*"
syntex_syntax = "*"
toml = "*"
env_logger = "*"
docopt = "0.6.*"
rustc-serialize = "0.3"

[features]
nightly = []
